--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+
 </head>
 <body>
     <div class="card">
-        <div class="search">
+        <div class="search flex flex-col md:flex-row p-2">
             <input type="text" placeholder="City.." spellcheck="false">
-            <button><img src="images/search.png" alt="Search button"></button>
+            <button class="flex justify-center items-center mt-2"><img src="images/search.png" alt="Search button"></button>
         </div>
+        
+        
         <div class="error">
             <p>Invalid City Name</p>
         </div>
@@ -18,7 +22,7 @@
             <img src="images/rain.png" alt="rain" class="weather-icon">
             <h1 class="temp">22°C</h1>
             <h2 class="city">New York</h2>
-            <div class="details">
+            <div class="details flex flex-col md:flex-row">
                 <div class="col">
                     <img src="images/humidity.png" alt="humidity">
                     <div>
@@ -26,7 +30,7 @@
                         <p>humidity</p>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col pt-5">
                     <img src="images/wind.png" alt="wind">
                     <div>
                         <p class="wind">15kmph</p>
